--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-python-telegram-bot==21.1
-pandas==2.1.3
-openpyxl==3.10.0
-openai==1.3.9
-python-dotenv==1.0.0
-```
+python-telegram-bot
+pandas
+openai
+python-dotenv
